src/main/java/com/example/object/good/ticket/domain/Invitation.java
package com.example.object.good.ticket.domain;

import java.time.LocalDateTime;

public class Invitation {
    private LocalDateTime when;
}
