src/main/java/com/example/object/bad/ticket/domain/Ticket.java
package com.example.object.bad.ticket.domain;

public class Ticket {
    private Long fee;

    public Long getFee() {
        return fee;
    }
}
